<resources>
    <string name="app_name">Contact Manager</string>
    <string name="Search">Search</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_phonenumber">Phone Number</string>
    <string name="Content_Description">Image of the Respective Contact</string>
    <string name="Add_Button">DONE</string>
    <string name="Groups">Add into Existing Groups-</string>
    <string name="Contacts">Existing Contacts-</string>
    <string name="err_msg_first_name">Please Enter Your First Name</string>
    <string name="err_msg_last_name">Please Enter Your Last Name</string>
    <string name="err_msg_phone_number">Please Enter Your Phone Number</string>
    <string name="Contact_Id">Contact Id:</string>
    <string name="Group_Id">Group Id:</string>
    <string name="First_Name">First Name:</string>
    <string name="Last_Name">Last Name:</string>
    <string name="Phone_Number">Phone Number:</string>
    <string name="Content_Description_Image_Contact">Image of the Contact</string>
    <string name="Content_Description_IsFavourite_ImageButton">Is Favourite or not</string>
    <string name="Content_Description_AddtoGroup_ImageButton">Add to Group</string>
    <string name="hint_groupname">Group Name</string>
    <string name="hint_description">Group Description</string>
    <string name="Group_Name">Group Name:</string>
    <string name="Description">Description:</string>
    <string name="err_msg_description">Please enter the Description of the group</string>
    <string name="err_msg_group_name">Please enter the Group Name</string>
    <string name="Add_Group">ADD GROUP:</string>
    <string name="Add_Contact">ADD CONTACT:</string>
    <string name="View_Group">VIEW GROUP:</string>
    <string name="View_Contact">VIEW CONTACT:</string>
    <string name="DisplayConcernedGroups">Groups Added:- </string>
    <string name="DisplayConcernedContacts">Contacts Added:- </string>
    <string name="Search_Statement">Search By Contact Name ,Number or Group Name</string>
    <string name="Content_Description_Search_ImageView">Just a show piece</string>
    <string name="search_image_button">search image button</string>
    <string name="Search_Contact">Contacts</string>
    <string name="Search_Group">Groups</string>
    <string name="AddtoContact">Add as a Contact</string>
    <string name="AddtoGroup">Add as a Group</string>
</resources>
