<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/Add_Group"

            android:background="#310bc8"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:textStyle="bold|normal|italic" />
        //image view

        <RelativeLayout
            android:id="@+id/ImageContactView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/contect_image"
                android:contentDescription="@string/Content_Description" />


            <Button
                android:id="@+id/add_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_done"
                android:paddingRight="40dp"
                android:singleLine="false"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />



        </RelativeLayout>

        //Add information

        <LinearLayout
            android:id="@+id/AddInformationView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_groupname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_groupname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_groupname" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description" />

            </android.support.design.widget.TextInputLayout>



        </LinearLayout>

        //Group List

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/Contacts"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark" />

            <ListView
                android:id="@+id/contactlistView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:clickable="true"
        android:src="@drawable/ic_camera"
        app:backgroundTint="@color/pink"
        app:layout_anchor="@id/ImageContactView"
        app:layout_anchorGravity="bottom|right|end"/>
</android.support.design.widget.CoordinatorLayout>
